projects/bot_eval_run/debug_ts_raw_no_fallback_177187/iterations/01/cmd_node_--test_tests_oracle.test.js.stdout.txt
✖ TaskStore: CRUD persists to JSON file (3.9716ms)
✖ CLI: end-to-end flow (37.5545ms)
ℹ tests 2
ℹ suites 0
ℹ pass 0
ℹ fail 2
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 94.7107

✖ failing tests:

test at tests\oracle.test.js:26:1
✖ TaskStore: CRUD persists to JSON file (3.9716ms)
  ReferenceError: existsSync is not defined
      at TaskStore.list (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\debug_ts_raw_no_fallback_177187\workspace\dist\store.js:23:9)
      at TestContext.<anonymous> (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\debug_ts_raw_no_fallback_177187\workspace\tests\oracle.test.js:35:26)
      at Test.runInAsyncScope (node:async_hooks:214:14)
      at Test.run (node:internal/test_runner/test:1106:25)
      at Test.start (node:internal/test_runner/test:1003:17)
      at startSubtestAfterBootstrap (node:internal/test_runner/harness:358:17)

test at tests\oracle.test.js:62:1
✖ CLI: end-to-end flow (37.5545ms)
  AssertionError [ERR_ASSERTION]: C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\debug_ts_raw_no_fallback_177187\workspace\dist\cli.js:59
          const id = argv[1];
                ^
  
  SyntaxError: Identifier 'id' has already been declared
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
      at node:internal/main/run_main_module:33:47
  
  Node.js v24.12.0
  
  
  1 !== 0
  
      at TestContext.<anonymous> (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\debug_ts_raw_no_fallback_177187\workspace\tests\oracle.test.js:69:10)
      at Test.runInAsyncScope (node:async_hooks:214:14)
      at Test.run (node:internal/test_runner/test:1106:25)
      at Test.processPendingSubtests (node:internal/test_runner/test:788:18)
      at Test.postRun (node:internal/test_runner/test:1235:19)
      at Test.run (node:internal/test_runner/test:1163:12)
      at async startSubtestAfterBootstrap (node:internal/test_runner/harness:358:3) {
    generatedMessage: false,
    code: 'ERR_ASSERTION',
    actual: 1,
    expected: 0,
    operator: 'strictEqual',
    diff: 'simple'
  }
